--- a/Damps/res/layout/setstarters.xml
+++ b/Damps/res/layout/setstarters.xml
@@ -81,5 +81,76 @@
                 android:text="@string/f113" />
         </LinearLayout>
     </RadioGroup>
+    
+    <TableLayout
+        android:id="@+id/tl_setstarters_table1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rg_setstarters_group1"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
+        android:stretchColumns="2" > 
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                style="@style/column"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/column_left"
+                android:onClick="sortTeam"
+                android:text="@string/team" />
+
+            <TextView
+                style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/column_mid"
+                android:onClick="sortPos"
+                android:text="@string/pos" />
+
+            <TextView
+                style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/column_mid"
+                android:onClick="sortName"
+                android:text="@string/name" />
+
+            <TextView
+                style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:background="@drawable/column_mid"
+                android:onClick="sortScore"
+                android:text="@string/score" />
+            
+            <TextView
+                style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:background="@drawable/column_right"
+                android:clickable="false"
+                android:text="@string/release"
+                android:textColor="@color/damps_blau" />
+        </TableRow>
+    </TableLayout>
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tl_setstarters_table1" >
+
+        <TableLayout
+            android:id="@+id/tl_setstarters_roster"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:orientation="vertical"
+            android:stretchColumns="2" >
+        </TableLayout>
+    </ScrollView>
 
 </RelativeLayout>
