--- a/Damps/res/values/arrays.xml
+++ b/Damps/res/values/arrays.xml
@@ -30,6 +30,14 @@
         <item>2011</item>
         <item>2012</item>
     </string-array>
+    <string-array name="formations">
+        <item>standard</item>
+        <item>3-1-1</item>
+        <item>1-3-1</item>
+        <item>1-2-2</item>
+        <item>2-1-2</item>
+        <item>1-1-3</item>
+    </string-array>
     <string-array name="NFLTeams">
         <item>Buffalo Bills</item>
         <item>Miami Dolphins</item>
