--- a/Damps/res/layout/teammanagement.xml
+++ b/Damps/res/layout/teammanagement.xml
@@ -25,7 +25,9 @@
         android:onClick="selectStarter"
         android:text="@string/select"
         android:layout_width="fill_parent"
-        android:layout_below="@+id/rl_teammanagement_layout1" />
+        android:layout_below="@+id/rl_teammanagement_layout1"
+        android:enabled="false"
+        android:background="@drawable/button_inactive" />
 
     <Button
         android:id="@+id/bu_teammanagement_release"
@@ -41,7 +43,9 @@
         android:onClick="signFreeAgent"
         android:text="@string/sign"
         android:layout_width="fill_parent"
-        android:layout_below="@+id/bu_teammanagement_release" />
+        android:layout_below="@+id/bu_teammanagement_release"
+        android:enabled="false"
+        android:background="@drawable/button_inactive" />
 
     <Button
         android:id="@+id/bu_teammanagement_trades"
@@ -49,6 +53,8 @@
         android:onClick="openTrades"
         android:text="@string/trades"
         android:layout_width="fill_parent"
-        android:layout_below="@+id/bu_teammanagement_sign" />
+        android:layout_below="@+id/bu_teammanagement_sign"
+        android:enabled="false"
+        android:background="@drawable/button_inactive" />
 
 </RelativeLayout>
