--- a/Damps/res/values/styles.xml
+++ b/Damps/res/values/styles.xml
@@ -20,6 +20,19 @@
         <item name="android:layout_margin">4dp</item>
     </style>
     
+    <style name="spinner">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:drawSelectorOnTop">true</item>
+        <item name="android:background">@color/damps_blau</item>
+        <item name="android:textColor">@color/weis</item>
+        <item name="android:textSize">25dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
+    
     <style name="radio_button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
