--- a/Damps/res/layout/new_message.xml
+++ b/Damps/res/layout/new_message.xml
@@ -66,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tv_newm_msg"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:gravity="top|left" />
 
 </RelativeLayout>
