--- a/Damps/res/layout/new_post.xml
+++ b/Damps/res/layout/new_post.xml
@@ -43,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tv_newpost_msg"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:gravity="top|left" />
 
 </RelativeLayout>
