--- a/Damps/res/layout/new_thread.xml
+++ b/Damps/res/layout/new_thread.xml
@@ -78,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tv_newthread_msg"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:gravity="top|left" />
 
 </RelativeLayout>
