signactivity bisher kein suchen/signen

--- a/Damps/res/drawable/radio_button_mid_pressed.xml
+++ b/Damps/res/drawable/radio_button_mid_pressed.xml
@@ -4,10 +4,6 @@
     android:shape="rectangle" >
 
     <!-- you can use any color you want I used here gray color -->
-    <solid android:color="@color/damps_blau" />
-
-    <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp" />
+    <solid android:color="@color/damps_blau_pressed" />
 
 </shape>
