--- a/Damps/res/drawable/column_lr.xml
+++ b/Damps/res/drawable/column_lr.xml
@@ -5,8 +5,9 @@
 
     <solid android:color="@color/damps_blau" />
 
-    <corners android:topLeftRadius="5dp" />
-    <corners android:topRightRadius="5dp" />
+    <corners
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
 
     <padding android:left="2dp" />
 
