--- a/Damps/res/drawable/radio_button_left.xml
+++ b/Damps/res/drawable/radio_button_left.xml
@@ -8,6 +8,6 @@
 
     <corners
         android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp" />
+        android:topLeftRadius="5dp" />
 
 </shape>
