--- a/Damps/res/drawable/radio_button_left_pressed.xml
+++ b/Damps/res/drawable/radio_button_left_pressed.xml
@@ -4,10 +4,10 @@
     android:shape="rectangle" >
 
     <!-- you can use any color you want I used here gray color -->
-    <solid android:color="@color/damps_blau" />
+    <solid android:color="@color/damps_blau_pressed" />
 
     <corners
         android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp" />
+        android:topLeftRadius="5dp" />
 
 </shape>
