--- a/Damps/res/drawable/radio_button_right_pressed.xml
+++ b/Damps/res/drawable/radio_button_right_pressed.xml
@@ -4,10 +4,11 @@
     android:shape="rectangle" >
 
     <!-- you can use any color you want I used here gray color -->
-    <solid android:color="@color/damps_blau" />
+    <solid android:color="@color/damps_blau_pressed" />
 
-    <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp" />
+    <corners android:bottomRightRadius="5dip"
+             android:bottomLeftRadius="0.1dp"
+             android:topLeftRadius="0.1dp"
+             android:topRightRadius="5dip"/>
 
 </shape>
