--- a/Damps/res/layout/messageitem.xml
+++ b/Damps/res/layout/messageitem.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/damps_blau"
     android:orientation="horizontal" >
 
     <ImageView
         android:id="@+id/iv_mes_read"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/pic_read"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:background="@color/damps_blau"
+        android:contentDescription="@string/pic_read" />
 
     <LinearLayout
         android:layout_width="match_parent"
